# agentic-ai-mock-interview-platform

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: evaluator_agent.py  interview_agent.py  planner_agent.py  question_agent.py  report_agent.py  resume_parser.py
backend/app/dependencies/: auth.py
backend/app/routes/: auth_routes.py  resume_routes.py
backend/app/schemas/: auth_schema.py  resume_schema.py
backend/app/services/: gemini_service.py  openrouter_service.py
backend/app/utils/: auth.py
database/: a.py
frontend/: package.json
frontend(UI)/: package-lock.json
frontend(UI)/app/: page.tsx
frontend(UI)/app/Interview/: page.tsx
frontend(UI)/components/: RoleCard.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/Interview/: page.tsx
frontend/app/Result/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/interviews/: page.tsx
frontend/app/login/: page.tsx
frontend/app/planner/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/report/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/start/: page.tsx
frontend/components/: Hero.tsx  InterviewChat.tsx  Navbar.tsx
frontend/lib/: auth.ts
